Fix images on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -237,4 +237,5 @@ table td {
 .grouppic {
   margin: 10px 0;
   max-width: 800px;
+  width: 100%;
 }
